--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,10 @@
 }
 
 .app-container {
-  padding-left: 130px;
-  padding-right: 433px;
-  padding-bottom: 815px;
+    padding-left: 89px;
+    /* padding-right: 433px; */
+    padding-bottom: 815px;
+    /* width: 100%; */
 }
 
 .navbar-container {
@@ -125,6 +126,7 @@ select {
   padding-bottom: 100px;
   padding-left: 17px;
   padding-right: 17px;
+  margin: 0;
 }
 
 .total-products {
