--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
 .app-container {
     padding-left: 89px;
     /* padding-right: 433px; */
-    padding-bottom: 815px;
+    padding-bottom: 902px;
     /* width: 100%; */
 }
 
@@ -122,11 +122,11 @@ select {
 }
 
 #app {
-  max-width: 1800px;
-  padding-bottom: 100px;
-  padding-left: 17px;
-  padding-right: 17px;
-  margin: 0;
+    /* max-width: 1800px; */
+    padding-bottom: 100px;
+    padding-left: 17px;
+    padding-right: 17px;
+    margin: 0;
 }
 
 .total-products {
