some changes committed

--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,8 @@
 }
 
 .app-container {
-  padding-left: 130px;
-  padding-right: 433px;
-  padding-bottom: 815px;
+  padding-left: 89px;
+  padding-bottom: 902px;
 }
 
 .navbar-container {
@@ -121,10 +120,10 @@ select {
 }
 
 #app {
-  max-width: 1800px;
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
   padding-left: 17px;
   padding-right: 17px;
+  margin: 0;
 }
 
 .total-products {
