--- a/src/style.css
+++ b/src/style.css
@@ -382,6 +382,9 @@ input:checked ~ .checkmark .checkmark-inner {
     flex-direction: column;
     align-items: center;
     animation: slideUp 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    border-left: 3px solid #dddddd;
+    border-bottom: 3px solid #dddddd;
+    border-right: 3px solid #dddddd;
   }
 
   .mobile-sort-title {
