--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,14 @@
   font-family: "Mundo Sans";
 }
 
+.vue-devtools__anchor--hide .vue-devtools__panel[data-v-640ec535] {
+  display: none;
+}
+
+.hidden-desktop {
+  display: none;
+}
+
 .app-container {
   padding-bottom: 1em;
 }
@@ -36,15 +44,17 @@ select {
 }
 
 .image-wrapper-class {
-  width: 267px;
-  height: 357px;
+  width: 100%;
+  height: 0;
   overflow: hidden;
   display: block;
+  padding-bottom: 100%;
+  max-width: 267px;
 }
 
 .image-container-1 {
-  height: inherit;
-  width: inherit;
+  height: auto;
+  width: 100%;
 }
 
 .image-container-2 {
@@ -53,8 +63,8 @@ select {
 
 .image-wrapper-class:hover .image-container-2 {
   display: block;
-  height: inherit;
-  width: inherit;
+  height: auto;
+  width: 100%;
 }
 
 .image-wrapper-class:hover .image-container-1 {
@@ -66,7 +76,7 @@ select {
   flex-wrap: wrap;
   list-style: none;
   width: 100%;
-  gap: 20px;
+  gap: 38px;
   padding-top: 10px;
 }
 
@@ -117,11 +127,7 @@ select {
   letter-spacing: 0.3em;
   padding-bottom: 10px;
   cursor: pointer;
-  padding-top: 18px;
-}
-
-.filter-sort-container {
-  display: none;
+  padding-top: 8px;
 }
 
 #app {
@@ -133,12 +139,7 @@ select {
   max-width: 1550px;
 }
 
-.total-products {
-  display: none;
-}
-
 #category {
-  padding-top: 5px;
   background-color: transparent;
   border: none;
   font-size: 1.1em;
@@ -162,14 +163,6 @@ select {
   color: #494949;
   text-transform: capitalize;
   padding-left: 20px;
-}
-
-.filter-sort-container {
-  display: none;
-}
-
-.filter-sidebar {
-  display: none;
 }
 
 .filter-list-items {
@@ -201,6 +194,10 @@ select {
   justify-content: space-between;
   width: 100%;
   align-items: flex-end;
+}
+
+span.products-count {
+  padding-bottom: 10px;
 }
 
 .sort-by-container {
@@ -236,6 +233,7 @@ select {
   justify-content: center;
   cursor: pointer;
   flex-wrap: wrap;
+  padding-top: 30px;
 }
 
 .active-page {
@@ -287,14 +285,11 @@ input:checked ~ .checkmark .checkmark-inner {
 }
 
 .scroll-to-top {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   color: black;
   background-color: white;
   border-radius: 50%;
@@ -573,7 +568,7 @@ input:checked ~ .checkmark .checkmark-inner {
     justify-content: center;
   }
 
-  .left-content {
+  .mobile-hidden {
     display: none;
   }
 
@@ -585,6 +580,7 @@ input:checked ~ .checkmark .checkmark-inner {
     width: 100%;
     object-fit: cover;
     height: auto;
+    padding-bottom: unset;
   }
 
   .images-list-items {
@@ -624,10 +620,6 @@ input:checked ~ .checkmark .checkmark-inner {
     padding-left: 0;
   }
 
-  .top-right-container {
-    display: none;
-  }
-
   .image-container-1 {
     width: 100%;
     height: auto;
@@ -650,12 +642,6 @@ input:checked ~ .checkmark .checkmark-inner {
     margin: 0;
     padding: 0;
     padding-left: 8px;
-  }
-
-  .scroll-to-top {
-    opacity: 1;
-    height: 40px;
-    width: 40px;
   }
 
   .scroll-to-top-btn {
